Move application specific static files to app/static/app
Application specific files such as css and images are moved within app/static/app

--- a/advisinggroups/templates/advisinggroups/index.html
+++ b/advisinggroups/templates/advisinggroups/index.html
@@ -4,7 +4,7 @@
 {% block head %}
     {% load staticfiles %}
     <script src='{% static "advisinggroups/index.js" %}'></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'advisinggroups/styles/style.css' %}">
 {% endblock %}
 
 {% block content %}
