--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -8,8 +8,8 @@
         <title>Student Explorer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
-        <link rel="apple-touch-icon" href="{% static 'images/icon.png' %}">
+        <link rel="shortcut icon" href="{% static 'seumich/images/favicon.ico' %}">
+        <link rel="apple-touch-icon" href="{% static 'seumich/images/icon.png' %}">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
@@ -35,7 +35,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="main-color-white main-navbar-brand navbar-brand" href="/"><img id="student-explorer-logo" src="/static/images/se-logo.svg" alt="student explorer logo">Student Explorer</a>
+                    <a class="main-color-white main-navbar-brand navbar-brand" href="/"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -107,13 +107,13 @@
             {% block content %}{% endblock %}
             <div class="footer">
                 <div class='feedback center-align visible-md visible-lg'>
-                    <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
+                    <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
                     <a href="/feedback/">submitting your feedback</a>
                 </div>
                 <div class='feedback center-align visible-sm visible-xs'>
                     <a href="/feedback/">
                         <button type="button" class="btn btn-sm btn-default">
-                            <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>
+                            <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>
                             Submit Feedback</button>
                     </a>
                 </div>
