Refactor links in templates
- Use builtin url tag to refactor links in templates. This will allow us to change urls.py and change will be affected everywhere.

--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -22,7 +22,7 @@
                     {% for advisor in advisors %}
                         <tr>
                             <th scope="row" class="bold">
-                                <a href="/advisors/{{ advisor.username }}/">{{ advisor.first_name }}
+                                <a href="{% url 'seumich:advisor' advisor.username %}">{{ advisor.first_name }}
                                     {{ advisor.last_name }}</a>
                             </th>
                         </tr>
