--- a/seumich/templates/seumich/student_info_partial.html
+++ b/seumich/templates/seumich/student_info_partial.html
@@ -1,5 +1,5 @@
 {% if link_present %}
-    <a class="student-detail-student-name-link" href="/students/{{student.username}}/">
+    <a class="student-detail-student-name-link" href="{% url 'seumich:student' student.username %}">
         <h1 class="student-detail-student-name">{{student.first_name}}
             {{student.last_name}}</h1>
     </a>
