--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -35,15 +35,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="main-color-white main-navbar-brand navbar-brand" href="/"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</a>
+                    <a class="main-color-white main-navbar-brand navbar-brand" href="{% url 'seumich:index' %}"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="/" data-toggle="collapse" data-target="#navbar.in">My Students</a>
+                            <a href="{% url 'seumich:index' %}" data-toggle="collapse" data-target="#navbar.in">My Students</a>
                         </li>
                         <li>
-                            <a href="/advisors/" data-toggle="collapse" data-target="#navbar.in">Advisors</a>
+                            <a href="{% url 'seumich:advisors_list' %}" data-toggle="collapse" data-target="#navbar.in">Advisors</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -81,7 +81,7 @@
                             </li>
                         {% endif %}
                     </ul>
-                    <form action="/students/" method="get" class="navbar-form navbar-right">
+                    <form action="{% url 'seumich:students_list' %}"method="get" class="navbar-form navbar-right">
                         <div class="form-group">
                             <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
                             <input id="student-search" value="{{ query_user | default_if_none:'' }}" name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
@@ -108,17 +108,17 @@
             <div class="footer">
                 <div class='feedback center-align visible-md visible-lg'>
                     <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-                    <a href="/feedback/">submitting your feedback</a>
+                    <a href="{% url 'feedback:feedback' %}">submitting your feedback</a>
                 </div>
                 <div class='feedback center-align visible-sm visible-xs'>
-                    <a href="/feedback/">
+                    <a href="{% url 'feedback:feedback' %}">
                         <button type="button" class="btn btn-sm btn-default">
                             <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>
                             Submit Feedback</button>
                     </a>
                 </div>
                 <div class="container-fluid">
-                    <p class="main-color-white">Student Explorer (<a href="/about" style="text-decoration: none; color: inherit;">2.1.2</a>)
+                    <p class="main-color-white">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.1.2</a>)
                         <span class="footer-block">Copyright &copy; 2015 - 2016</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </p>
