--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -323,8 +323,8 @@ th[scope="row"] {
         width: auto;
         margin: -$primary-margin -15px 0;
     }
-    .sub-header-backlink {
-        margin-top: 0;
+    .sub-header-backlink{
+        margin-top: 10px;
         display: block;
     }
     .student-detail-main-menu-top {
@@ -502,9 +502,9 @@ a.class-site-status-link {
 .legend-key {
     border-radius: 50%;
     display: inline-block;
-    height: 10px;
+    height: 15px;
     margin-right: 0.4em;
-    width: 10px;
+    width: 15px;
 }
 .student-legend-key {
     background-color: $color_st_tropaz_approx;
