added a top-margin to the data source section

--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -262,6 +262,10 @@ th[scope="row"] {
   margin-right: 10px;
 }
 
+.student-detail-data-source {
+  margin-top: 10px;
+}
+
 .student-info {
   background-color: #eee;
   padding: 0.75em;
