--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -217,6 +217,9 @@ th[scope="row"] {
     margin-left: $secondary-margin;
     margin-right: $secondary-margin;
 }
+.student-detail-data-source{
+  margin-top:10px;
+}
 .student-info {
     background-color: $color_gallery_approx;
     padding: 0.75em;
