--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -77,7 +77,7 @@
                             {% endif %}
                         </h3>
                     </div>
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 student-detail-data-source">
                         <div>
                             Data Source:
                             <span class="label label-primary">{{classSite.source_system}}</span>
