--- a/seumich/static/seumich/styles/_secolor.scss
+++ b/seumich/static/seumich/styles/_secolor.scss
@@ -24,3 +24,6 @@ $color_astronaut_blue_approx: #124465;
 $color_alto_approx: #dedede;
 $color_steel_blue_approx: #337ab7;
 $gray:  gray;
+$light-gray-background: #F9F9F9;
+$gray-hover-state: #E5E5E5;
+$gray-active-state: #CCCCCC;
